--- a/Project/BillX/package.json
+++ b/Project/BillX/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-elements": "^3.4.3",
