--- a/Project/BillX/package.json
+++ b/Project/BillX/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "^4.7.4",
